[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hushine-strategy-library"
version = "0.1.0"
description = "Shared strategy, market-data, logging, and middleware utilities for Hushine."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Hushine Tech" }
]
dependencies = [
  "requests>=2.28.0",
  "kafka-python>=2.0.0",
  "grpcio>=1.60.0",
  "protobuf>=4.25.0",
  "opentelemetry-api>=1.20.0",
  "opentelemetry-sdk>=1.20.0",
  "opentelemetry-exporter-otlp-proto-http>=1.20.0",
  "pandas>=1.5.0",
  "psycopg2-binary>=2.9.0",
  "PyYAML>=6.0.0"
]

[project.optional-dependencies]
algo = [
  "pandas-ta>=0.3.14"
]
test = [
  "pytest>=7.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = [
  "algo*",
  "hushine_strategy*",
  "market_data*",
  "strategy_service*",
  "utils*"
]
exclude = [
  "tests*",
  "*.tests*"
]
